@@ -3,6 +3,7 @@ abstract: 'Data objects for person.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  Data::ExternalId: 0
   English: 0
   Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
