@@ -6,6 +6,7 @@ SYNOPSIS
 
      my $obj = Data::Person->new(%params);
      my $email = $obj->email;
+     my $external_ids_ar = $obj->external_ids;
      my $id = $obj->id;
      my $name = $obj->name;
      my $sex = $obj->sex;
@@ -22,6 +23,11 @@ METHODS
 
             Person's email for external identification. It's optional.
             Default value is undef.
+
+    *       "external_ids"
+
+            Person external ids. It's optional. Value must be a instance of
+            Data::ExternalId object. Default value is [].
 
     *       "id"
 
@@ -43,6 +49,13 @@ METHODS
     Get person email.
 
     Returns string.
+
+  "external_ids"
+     my $external_ids_ar = $obj->external_ids;
+
+    Get external ids.
+
+    Returns reference to array with Data::ExternalId instances.
 
   "id"
      my $id = $obj->id;
@@ -67,6 +80,13 @@ METHODS
 
 ERRORS
      new():
+             From Mo::utils::check_array_object():
+                     Parameter 'external_ids' must be a array.
+                             Value: %s
+                             Reference: %s
+                     External id isn't 'Data::ExternalId' object.
+                             Value: %s
+                             Reference: %s
              From Mo::utils::check_number_id():
                      Parameter 'id' must a natural number.
                              Value: %s
@@ -80,12 +100,19 @@ EXAMPLE
      use strict;
      use warnings;
 
+     use Data::ExternalId;
      use Data::Person;
      use DateTime;
      use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
      my $obj = Data::Person->new(
              'email' => 'skim@cpan.org',
+             'external_ids' => [
+                     Data::ExternalId->new(
+                             'key' => 'Wikidata',
+                             'value' => 'Q27954834',
+                     ),
+             ],
              'id' => 1,
              'name' => decode_utf8('Michal Josef Špaček'),
              'sex' => 'male',
@@ -96,12 +123,16 @@ EXAMPLE
      print 'Name: '.encode_utf8($obj->name)."\n";
      print 'Email: '.$obj->email."\n";
      print 'Sex: '.$obj->sex."\n";
+     foreach my $external_id (@{$obj->external_ids}) {
+            print 'External id - '.$external_id->key.': '.$external_id->value."\n";
+     }
 
      # Output:
      # Id: 1
      # Name: Michal Josef Špaček
      # Email: skim@cpan.org
      # Sex: male
+     # External id - Wikidata: Q27954834
 
 DEPENDENCIES
     Mo, Mo::utils, Mo::utils::Email, Readonly.
