@@ -1,7 +1,5 @@
 TODO
 ====
-1. Add external identifiers.
-Data::ExternalId
 3. Add first and last name(s).
 4.
 
@@ -10,3 +8,7 @@ Applied
 2. Multiple emails or move email to external id?
 Email is one of base external identifier.
 NONE [20240527] skim
+
+1. Add external identifiers.
+Data::ExternalId
+OK [20250304] skim
