@@ -1,4 +1,5 @@
 0.04
+ - Add 'external_ids' parameter.
  - Update copyright years.
 
 0.03 2024-05-27T10:45:18+02:00
